Bug 319862 - Registering new KDE Talk accounts is broken
Summary: Registering new KDE Talk accounts is broken
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-15 08:19 UTC by Martin Klapetek
Modified: 2013-07-15 10:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2013-05-15 08:19:49 UTC
I can't register new KDE Talk account from our Accounts KCM. Gabble log shows nothing about registering and Ben Cooksley confirmed there were no registration attempts in the server log (though he pointed out it might be because the server simply does not log them). Created users through our KCM are not present on the server (that was confirmed as well).

Might apply to registering to other jabber servers as well.
Comment 1 David Edmundson 2013-05-16 09:45:25 UTC
Apparently registration currently works in Pidgin (comment from Thomas Pfeiffer)
Comment 2 Martin Klapetek 2013-05-16 09:55:01 UTC
Also works in PSI and Ben reported it working from Kopete too.
Comment 3 David Edmundson 2013-07-15 10:10:42 UTC
Git commit 5f877bdfb9fa0591565c9c5f590c076766316f7c by David Edmundson.
Committed on 15/07/2013 at 10:08.
Pushed by davidedmundson into branch 'kde-telepathy-0.6'.

Connect the "register" button in KDETalk UI
Reviewed-by: Martin Klapetek

M  +2    -0    plugins/gabble/main-options-widget-kde-talk.cpp

http://commits.kde.org/telepathy-accounts-kcm/5f877bdfb9fa0591565c9c5f590c076766316f7c