Connect the "register" button in KDETalk UI

BUG: 319862
Reviewed-by: Martin Klapetek