plugins/gabble/main-options-widget-kde-talk.cpp
@@ -45,6 +45,8 @@ MainOptionsWidgetKDETalk::MainOptionsWidgetKDETalk(ParameterEditModel *model,
     }
 
     handleParameter(QLatin1String("password"), QVariant::String, m_ui->passwordLineEdit, m_ui->passwordLabel);
+    handleParameter(QLatin1String("register"), QVariant::Bool, m_ui->registerCheckBox, 0);
+
     QTimer::singleShot(0, m_ui->accountLineEdit, SLOT(setFocus()));
 }
 
